<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.statistics.StatisticsFragment">


    <Spinner
        android:id="@+id/spnr_fragment_statistics_main_range_shown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/arr_fragment_statistics_main_date_selector" />

    <LinearLayout
        android:id="@+id/ll_fragment_statistics_title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/spnr_fragment_statistics_main_range_shown"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fragment_statistics_main_ideal_header"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/pistachioGreen"
            android:text="@string/frag_stats_title_ideal"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_fragment_statistics_main_elevated_header"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/retro_yellow"
            android:text="@string/frag_stats_title_elevated"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_fragment_statistics_main_hyp_1_header"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/lightPumpkin"
            android:text="@string/frag_stats_title_hyp_stage_1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_fragment_statistics_main_hyp_2_header"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/darkPumpkin"
            android:text="@string/frag_stats_title_hyp_stage_2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_fragment_statistics_main_hyp_crisis_header"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/bloodyRed"
            android:text="@string/frag_stats_title_hyp_crisis"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_fragment_statistics_rv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Selected range: 09/06/2021 - 09/12/2021"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/ll_fragment_statistics_title_holder"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/ll_fragment_home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fragment_statistics_rv_title"
        app:layout_constraintBottom_toTopOf="@id/rv_fragment_statistics_readings">

        <TextView
            android:id="@+id/tv_item_display_all_users_first_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".10"
            android:textSize="14sp"
            android:text="@string/home_rv_title_dia" />

        <TextView
            android:id="@+id/tv_item_display_all_users_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/home_rv_title_sys" />

        <TextView
            android:id="@+id/tv_item_display_all_users_id_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/home_rv_title_pulse" />

        <TextView
            android:id="@+id/tv_item_rv_last_five_readings_time_stamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/home_rv_title_timestamp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fragment_statistics_readings"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:listitem="@layout/item_bp_readings"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_fragment_home_title" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pc_fragment_statistics_reading_spread"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/rv_fragment_statistics_readings" />

</androidx.constraintlayout.widget.ConstraintLayout>