<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.dialogs.SelectNumOfReadingsDialog">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_reading_selector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RadioGroup
        android:id="@+id/rg_dialog_select_num_of_holder"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/rb_dialog_select_num_of_holder_single_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reading_single"/>

        <RadioButton
            android:id="@+id/rb_dialog_select_num_of_holder_three_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reading_average_3"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_dialog_select_num_of_readings_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/bloodyRed"
        android:text="@string/dialog_cancel"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintTop_toBottomOf="@id/rg_dialog_select_num_of_holder"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_select_num_of_readings_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/pistachioGreen"
        android:text="@string/dialog_okay"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/rg_dialog_select_num_of_holder"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>