<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="25dp"
    android:paddingHorizontal="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.dialogs.SelectMedicationNameDialog">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_medication_name_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/spnr_dialog_select_medication_name_all_names"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <TextView
        android:id="@+id/tv_dialog_select_medication_name_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/bloodyRed"
        android:text="@string/dialog_cancel"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="250dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/spnr_dialog_select_medication_name_all_names"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_select_medication_name_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/pistachioGreen"
        android:text="@string/dialog_okay"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/spnr_dialog_select_medication_name_all_names"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>